@@ -1,3 +1,9 @@
+2008-06-09  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Fix bug 398179 - Loading
+	  project with "Solution" tab collapsed to side, exception when
+	  running.
+
 2008-06-06  Ankit Jain  <jankit@novell.com>
 
 	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: More usability
